--- a/style.css
+++ b/style.css
@@ -1648,7 +1648,7 @@ ul {
 
 /* banner section  */
 .banner_fullwidth {
-  background: url(banner/banner2222.jpg);
+  background: url(banner2222.jpg);
   margin-bottom: 64px;
 }
 
